--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -108,6 +108,7 @@ form {
 	left:50%;
 	transform:translate(-50%, -50%);
 	padding:48px;
+	background-color:$color-black;
 
 	h1 {
 		position:absolute;
