--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -51,3 +51,17 @@
 		}
 	}
 }
+
+.easy {
+	color:$color-green;
+}
+.medium {
+	color:$color-yellow;
+}
+.hard {
+	color:$color-red;
+}
+
+strong {
+	color:$color-white;
+}
